<resources>
    <string name="app_name">My Application</string>
    <string name="login_before_proceeding">Login before proceeding</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_error_title">Login error</string>
    <string name="error_general_body">Something went wrong. Please try again later</string>
    <string name="ok_button">OK</string>
    <string name="main_page_title">Welcome to Pet Adoption Database</string>
    <string name="pet_details_hyperlink">Click [HERE] to see more detailed info</string>
    <string name="description">Description:</string>
    <string name="species">Species:</string>
    <string name="gender">Gender:</string>
    <string name="size">Size:</string>
    <string name="breed">Breed:</string>
    <string name="mixed_breed">Mixed breed:</string>
    <string name="age">Age:</string>
    <string name="published_at">Published at:</string>
    <string name="distance">Distance:</string>
    <string name="view_more">View More</string>
    <string name="location_permission_title">Location Access</string>
    <string name="location_permission_body">We require to use your location in order to show you the nearest pets.</string>
    <string name="location_disabled_title">Location Disabled</string>
    <string name="location_disabled_body">Please go to settings and enable location on this device.</string>
    <string name="settings_action">Settings</string>
    <string name="no_results_text">No results for your current location.</string>
    <string name="location_search_hint">Type city, country, zip code</string>
</resources>